package at.qe.skeleton.model;

public enum NotificationType {
    EMAIL,
    SMS,
}
