package at.qe.skeleton.model;

public enum ProductEventType {
    BACK_IN_STOCK,
    FOR_SALE,
}
